; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/isa/extr_isa_dma.c_isa_dma_acquire.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/isa/extr_isa_dma.c_isa_dma_acquire.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@isa_dma_lock = common dso_local global i32 0, align 4
@dma_inuse = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"isa_dma_acquire: channel %d already in use\0A\00", align 1
@EBUSY = common dso_local global i32 0, align 4
@dma_auto_mode = common dso_local global i32 0, align 4
@VALID_DMA_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @isa_dma_acquire(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = call i32 @mtx_lock(i32* @isa_dma_lock)
  %5 = load i32, i32* @dma_inuse, align 4
  %6 = load i32, i32* %3, align 4
  %7 = shl i32 1, %6
  %8 = and i32 %5, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = call i32 @mtx_unlock(i32* @isa_dma_lock)
  %14 = load i32, i32* @EBUSY, align 4
  store i32 %14, i32* %2, align 4
  br label %26

15:                                               ; preds = %1
  %16 = load i32, i32* %3, align 4
  %17 = shl i32 1, %16
  %18 = load i32, i32* @dma_inuse, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* @dma_inuse, align 4
  %20 = load i32, i32* %3, align 4
  %21 = shl i32 1, %20
  %22 = xor i32 %21, -1
  %23 = load i32, i32* @dma_auto_mode, align 4
  %24 = and i32 %23, %22
  store i32 %24, i32* @dma_auto_mode, align 4
  %25 = call i32 @mtx_unlock(i32* @isa_dma_lock)
  store i32 0, i32* %2, align 4
  br label %26

26:                                               ; preds = %15, %10
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
